# monsterbook

./: .gitignore  README.md  entries.txt  package-lock.json  package.json  requirements.txt  rollup.config.js
monsterbook/: Cargo.toml
monsterbook/src/: app.rs  cli.rs  crop.rs  gui.rs  lib.rs  main.rs  stitch.rs  utils.rs
notebooks/: 2020-09-05 initial investigation.ipynb  2020-09-07 efficient farming guide parsing.ipynb  2020-09-25 cropping hdclient windows.ipynb  2021-12-32 phase correlation.ipynb  2022-01-01 remove background.ipynb
public/: global.css  index.html
python/: __main__.py  cli.py  utils.py
scripts/: generate_assets_js.py
src/: App.svelte  assets.js  book.js  image.js  metadata.js  monsters.js
