[package]
name = "monsterbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
convolve2d = { version = "0.1.0", features = ["image"] }
clap = { git = "https://github.com/clap-rs/clap/", features = ["derive"] }
